BugFix Alert Flash Message z-index :helicopter:

--- a/web/css/livredor.css
+++ b/web/css/livredor.css
@@ -89,6 +89,7 @@ table th {
  */
 div.alert {
 	position: fixed;
+	z-index: 9999;
 	top: 8em;
 	right: 20%;
 }
